412_domains_effects_errors.txt
[33m[WARNING][0m Failed checks on orun package definition from source at file:///home/shubham/new_sandmark/orun:
  [33mwarning[0m 35: Missing field 'homepage'
  [33mwarning[0m 36: Missing field 'bug-reports'
[33m[WARNING][0m Failed checks on rungen package definition from source at file:///home/shubham/new_sandmark/rungen:
  [33mwarning[0m 35: Missing field 'homepage'
  [33mwarning[0m 36: Missing field 'bug-reports'
[1;34m[NOTE][0m Package sexplib0 is already installed (current version is v0.14.0).
[1;34m[NOTE][0m Package yojson is already installed (current version is 1.7.0).
[1;34m[NOTE][0m Package dune-configurator is already installed (current version is 2.6.0).
[1;34m[NOTE][0m Package dune-private-libs is already installed (current version is 2.6.0).
[31m[ERROR][0m The compilation of base failed at "/home/shubham/new_sandmark/_opam/opam-init/hooks/sandbox.sh build dune build -p base -j 27".
[31m[ERROR][0m The compilation of topkg failed at "/home/shubham/new_sandmark/_opam/opam-init/hooks/sandbox.sh build ocaml pkg/pkg.ml build --pkg-name topkg --dev-pkg false".
[31m[ERROR][0m The compilation of lwt failed at "/home/shubham/new_sandmark/_opam/opam-init/hooks/sandbox.sh build dune build -p lwt -j 27".
[31m[ERROR][0m The compilation of frama-c failed at "/home/shubham/new_sandmark/_opam/opam-init/hooks/sandbox.sh build make -j27".

[31m#===[0m [01mERROR[0m [01mwhile compiling topkg.1.0.1[0m [31m========================================#[0m
[33m#[0m [33mcontext[0m     2.0.6 | linux/x86_64 | ocaml-base-compiler.4.12.0+domains+effects | file:///home/shubham/new_sandmark/dependencies
[33m#[0m [33mpath[0m        ~/new_sandmark/_opam/4.12.0+domains+effects/.opam-switch/build/topkg.1.0.1
[33m#[0m [33mcommand[0m     ~/new_sandmark/_opam/opam-init/hooks/sandbox.sh build ocaml pkg/pkg.ml build --pkg-name topkg --dev-pkg false
[33m#[0m [33mexit-code[0m   2
[33m#[0m [33menv-file[0m    ~/new_sandmark/_opam/log/topkg-12825-957220.env
[33m#[0m [33moutput-file[0m ~/new_sandmark/_opam/log/topkg-12825-957220.out
[33m### output ###
[0m[33m# [0m[...]
[33m# [0m70 |   let name = Topkg_pkg.name pkg in
[33m# [0m                  ^^^^^^^^^^^^^^
[33m# [0mError: Unbound module Topkg_pkg
[33m# [0mHint: Did you mean Topkg_log?
[33m# [0mFile "src/topkg.ml", line 30, characters 17-32:
[33m# [0m30 |   type install = Topkg_install.t
[33m# [0m                      ^^^^^^^^^^^^^^^
[33m# [0mError: Unbound module Topkg_install
[33m# [0mFile "./pkg/pkg.ml", line 27, characters 5-10:
[33m# [0m27 | open Topkg
[33m# [0m          ^^^^^
[33m# [0mError: Unbound module Topkg


[31m#===[0m [01mERROR[0m [01mwhile compiling lwt.5.3.0[0m [31m==========================================#[0m
[33m#[0m [33mcontext[0m     2.0.6 | linux/x86_64 | ocaml-base-compiler.4.12.0+domains+effects | file:///home/shubham/new_sandmark/dependencies
[33m#[0m [33mpath[0m        ~/new_sandmark/_opam/4.12.0+domains+effects/.opam-switch/build/lwt.5.3.0
[33m#[0m [33mcommand[0m     ~/new_sandmark/_opam/opam-init/hooks/sandbox.sh build dune build -p lwt -j 27
[33m#[0m [33mexit-code[0m   1
[33m#[0m [33menv-file[0m    ~/new_sandmark/_opam/log/lwt-12825-d3576a.env
[33m#[0m [33moutput-file[0m ~/new_sandmark/_opam/log/lwt-12825-d3576a.out
[33m### output ###
[0m[33m# [0m      ocamlc src/unix/.lwt_unix.objs/byte/lwt_unix.{cmi,cmti} (exit 2)
[33m# [0m(cd _build/default && /home/shubham/new_sandmark/_opam/4.12.0+domains+effects/bin/ocamlc.opt -w -40 -g -bin-annot -I src/unix/.lwt_unix.objs/byte -I /home/shubham/new_sandmark/_opam/4.12.0+domains+effects/lib/bytes -I /home/shubham/new_sandmark/_opam/4.12.0+domains+effects/lib/mmap -I /home/shubham/new_sandmark/_opam/4.12.0+domains+effects/lib/ocaml/threads -I /home/shubham/new_sandmark/_opam[...]
[33m# [0mFile "src/unix/lwt_unix.cppo.mli", lines 1000-1010, characters 0-13:
[33m# [0mError: This variant or record definition does not match that of type
[33m# [0m         Unix.socket_bool_option
[33m# [0m       The constructor SO_REUSEPORT is only present in the original definition.


[31m#===[0m [01mERROR[0m [01mwhile compiling frama-c.18.0[0m [31m=======================================#[0m
[33m#[0m [33mcontext[0m     2.0.6 | linux/x86_64 | ocaml-base-compiler.4.12.0+domains+effects | file:///home/shubham/new_sandmark/dependencies
[33m#[0m [33mpath[0m        ~/new_sandmark/_opam/4.12.0+domains+effects/.opam-switch/build/frama-c.18.0
[33m#[0m [33mcommand[0m     ~/new_sandmark/_opam/opam-init/hooks/sandbox.sh build make -j27
[33m#[0m [33mexit-code[0m   2
[33m#[0m [33menv-file[0m    ~/new_sandmark/_opam/log/frama-c-12825-4401d2.env
[33m#[0m [33moutput-file[0m ~/new_sandmark/_opam/log/frama-c-12825-4401d2.out
[33m### output ###
[0m[33m# [0m[...]
[33m# [0mshare/Makefile.generic:70: recipe for target 'src/kernel_services/parsetree/logic_ptree.cmi' failed
[33m# [0mmake: *** [src/kernel_services/parsetree/logic_ptree.cmi] Error 2
[33m# [0mshare/Makefile.generic:70: recipe for target 'src/kernel_internals/parsing/clexer.cmi' failed
[33m# [0mmake: *** [src/kernel_internals/parsing/clexer.cmi] Error 2
[33m# [0mshare/Makefile.generic:70: recipe for target 'src/kernel_services/plugin_entry_points/emitter.cmi' failed
[33m# [0mmake: *** [src/kernel_services/plugin_entry_points/emitter.cmi] Error 2
[33m# [0mFile "src/kernel_services/ast_queries/logic_env.mli", line 27, characters 5-14:
[33m# [0m27 | open Cil_types
[33m# [0m          ^^^^^^^^^
[33m# [0mError: Unbound module Cil_types
[33m# [0mshare/Makefile.generic:70: recipe for target 'src/kernel_services/ast_queries/logic_env.cmi' failed
[33m# [0mmake: *** [src/kernel_services/ast_queries/logic_env.cmi] Error 2


[31m#===[0m [01mERROR[0m [01mwhile compiling base.v0.14.0[0m [31m=======================================#[0m
[33m#[0m [33mcontext[0m     2.0.6 | linux/x86_64 | ocaml-base-compiler.4.12.0+domains+effects | file:///home/shubham/new_sandmark/dependencies
[33m#[0m [33mpath[0m        ~/new_sandmark/_opam/4.12.0+domains+effects/.opam-switch/build/base.v0.14.0
[33m#[0m [33mcommand[0m     ~/new_sandmark/_opam/opam-init/hooks/sandbox.sh build dune build -p base -j 27
[33m#[0m [33mexit-code[0m   1
[33m#[0m [33menv-file[0m    ~/new_sandmark/_opam/log/base-12825-e4f8df.env
[33m#[0m [33moutput-file[0m ~/new_sandmark/_opam/log/base-12825-e4f8df.out
[33m### output ###
[0m[33m# [0m[...]
[33m# [0mFile "src/array.ml", line 718, characters 49-61:
[33m# [0m718 |   let both = mapi t ~f:(fun i x -> if f i x then Either.First x else Either.Second x) in
[33m# [0m                                                       ^^^^^^^^^^^^
[33m# [0mAlert deprecated: module Base__.Import.Either
[33m# [0m[2016-09] this element comes from the stdlib distributed with OCaml.
[33m# [0mReferring to the stdlib directly is discouraged by Base. You should either
[33m# [0muse the equivalent functionality offered by Base, or if you really want to
[33m# [0mrefer to the stdlib, use Caml.Either instead
[33m# [0mFile "src/array.ml", line 718, characters 49-61:
[33m# [0m718 |   let both = mapi t ~f:(fun i x -> if f i x then Either.First x else Either.Second x) in
[33m# [0m                                                       ^^^^^^^^^^^^
[33m# [0mError: Unbound constructor Either.First


The former state can be restored with:
    opam switch import "/home/shubham/new_sandmark/_opam/4.12.0+domains+effects/.opam-switch/backup/state-20210318142950.export"
File "benchmarks/chameneos/dune", line 5, characters 12-20:
5 |  (libraries lwt.unix))
                ^^^^^^^^
Error: Library "lwt.unix" not found.
Hint: try:
  dune external-lib-deps --missing --profile release --workspace ocaml-versions/.workspace.4.12.0+domains+effects @buildbench
File "benchmarks/irmin/dune", line 3, characters 28-36:
3 | 	(libraries irmin irmin-mem lwt.unix))
                                ^^^^^^^^
Error: Library "lwt.unix" not found.
Hint: try:
  dune external-lib-deps --missing --profile release --workspace ocaml-versions/.workspace.4.12.0+domains+effects @buildbench
File "benchmarks/thread-lwt/dune", line 5, characters 16-24:
5 |  (libraries lwt lwt.unix))
                    ^^^^^^^^
Error: Library "lwt.unix" not found.
Hint: try:
  dune external-lib-deps --missing --profile release --workspace ocaml-versions/.workspace.4.12.0+domains+effects @buildbench
File "benchmarks/valet/dune", line 5, characters 47-55:
5 |  (libraries uuidm ocplib-endian unix react lwt lwt.unix))
                                                   ^^^^^^^^
Error: Library "lwt.unix" not found.
Hint: try:
  dune external-lib-deps --missing --profile release --workspace ocaml-versions/.workspace.4.12.0+domains+effects @buildbench
make: *** [ocaml-versions/4.12.0+domains+effects.bench] Error 1
